# wpi_uml

./: README.md  notes.txt
participant_display/: CMakeLists.txt  mainpage.dox  package.xml
participant_display/include/participant_display/: main_window.hpp  qnode.hpp
participant_display/src/: main.cpp  main_window.cpp  qnode.cpp
participant_display/ui/: main_window.ui
wpi_controller/: CMakeLists.txt  README.md  package.xml
wpi_controller/config/: cameras.perspective  states.xacro  states_BOARD1.xacro
wpi_controller/launch/: arm.launch  cameras.launch  controller.launch  gui.launch
wpi_controller/src/: groupstate_generator.cpp  wpi_controller.cpp
wpi_controller/util/: jointxml_v1.txt  output.txt
wpi_controller/util/jointlogger/: joints.txt  log
wpi_gui/: CMakeLists.txt  package.xml
wpi_gui/include/wpi_gui/: main_window.hpp  qnode.hpp
wpi_gui/src/: main.cpp  main_window.cpp  qnode.cpp
wpi_gui/ui/: main_window.ui  main_window.ui.old
