<?xml version="1.0"?>
<package>
  <name>wpi_controller</name>
  <version>0.0.0</version>
  <description>The wpi_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pgavriel@todo.todo">pgavriel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_ros_perception</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>geometric_shapes</build_depend>
    <build_depend>moveit_visual_tools</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <run_depend>panda_moveit_config</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_commander</run_depend>
    <run_depend>moveit_fake_controller_manager</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_ros_perception</run_depend>
    <run_depend>interactive_markers</run_depend>
    <run_depend>moveit_visual_tools</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_eigen</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
</package>
